# API_Alchemy

./: .env.example  .gitignore  AGENT_ROLES.md  ARCHITECTURE.md  DECISIONS.md  DOD_MATRIX.md  ENV_SETUP.md  GAP_SCAN.md  OPEN_QUESTIONS.md  PHASE_PLAN.md  PROJECT_BRIEF.md  README.md  RISK_REGISTER.md  pyproject.toml
docs/phase-3-design/: ADAPTER_GENERATION_FLOW.md  ENGINEER_AGENT_SPEC.md  SANDBOX_INTEGRATION.md
tests/: test_action_parity.py
tests/benchmarks/: __init__.py  test_judge.py
tests/integration/: test_engineer_agent.py  test_open_meteo_e2e.py  test_scout_agent.py  test_smoke.py
tests/security/: __init__.py  test_sandbox_isolation.py
