[project]
name = "api-alchemy-engine"
version = "0.1.0"
description = "Autonom motor som tar en ide eller doman -> producerar dataprodukt via agent-svarm. Compounding meta-maskin."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "human-robin" }]

dependencies = [
    "pydantic>=2.7,<3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "asyncpg>=0.29",
    "litellm>=1.40",
    "instructor>=1.3",
    "loguru>=0.7",
    "httpx>=0.27",
    "rich>=13",
    "python-dotenv>=1.0",
    "websockets>=12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "mypy>=1.10",
    "ruff>=0.4",
    "playwright>=1.43",
]
sandbox = [
    "e2b>=0.16",
]
secrets = [
    "tomli>=2; python_version < '3.11'",
]

[project.scripts]
alchemy = "packages.cli:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PL", "RUF"]
ignore = ["PLR0913"]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
files = ["packages", "tests"]

[[tool.mypy.overrides]]
module = ["litellm.*", "instructor.*", "e2b.*", "asyncpg.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8"
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: requires running Postgres",
    "e2e: requires running gateway + frontend",
    "slow: long-running tests",
]
